// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformPlainEntryFile Adjust padding 1`] = `
{
  "legend": {
    "enabled": false,
  },
  "padding": {
    "bottom": 10,
    "left": 20,
    "right": 20,
    "top": 10,
  },
  "seriesArea": {
    "padding": {
      "left": 40,
    },
  },
  "theme": {
    "baseTheme": "ag-default",
    "overrides": {
      "common": {
        "axes": {
          "category": {
            "label": {
              "autoRotate": false,
              "minSpacing": 20,
            },
          },
        },
      },
    },
  },
}
`;

exports[`transformPlainEntryFile Remove axes titles 1`] = `
{
  "axes": [
    {
      "position": "bottom",
      "title": {
        "enabled": false,
      },
      "type": "category",
    },
    {
      "position": "left",
      "title": {
        "enabled": false,
      },
      "type": "number",
    },
  ],
  "legend": {
    "enabled": false,
  },
  "padding": {
    "bottom": 10,
    "left": 20,
    "right": 20,
    "top": 10,
  },
  "theme": {
    "baseTheme": "ag-default",
    "overrides": {
      "common": {
        "axes": {
          "category": {
            "label": {
              "autoRotate": false,
              "minSpacing": 20,
            },
          },
        },
      },
    },
  },
}
`;

exports[`transformPlainEntryFile default entry file 1`] = `
{
  "legend": {
    "enabled": false,
  },
  "padding": {
    "bottom": 10,
    "left": 20,
    "right": 20,
    "top": 10,
  },
  "theme": {
    "baseTheme": "ag-default",
    "overrides": {
      "common": {
        "axes": {
          "category": {
            "label": {
              "autoRotate": false,
              "minSpacing": 20,
            },
          },
        },
      },
    },
  },
}
`;

exports[`transformPlainEntryFile disable legend 1`] = `
{
  "legend": {
    "enabled": false,
  },
  "padding": {
    "bottom": 10,
    "left": 20,
    "right": 20,
    "top": 10,
  },
  "theme": {
    "baseTheme": "ag-default",
    "overrides": {
      "common": {
        "axes": {
          "category": {
            "label": {
              "autoRotate": false,
              "minSpacing": 20,
            },
          },
        },
      },
    },
  },
}
`;

exports[`transformPlainEntryFile remove footnote 1`] = `
{
  "legend": {
    "enabled": false,
  },
  "padding": {
    "bottom": 10,
    "left": 20,
    "right": 20,
    "top": 10,
  },
  "theme": {
    "baseTheme": "ag-default",
    "overrides": {
      "common": {
        "axes": {
          "category": {
            "label": {
              "autoRotate": false,
              "minSpacing": 20,
            },
          },
        },
      },
    },
  },
}
`;

exports[`transformPlainEntryFile remove subtitle 1`] = `
{
  "legend": {
    "enabled": false,
  },
  "padding": {
    "bottom": 10,
    "left": 20,
    "right": 20,
    "top": 10,
  },
  "theme": {
    "baseTheme": "ag-default",
    "overrides": {
      "common": {
        "axes": {
          "category": {
            "label": {
              "autoRotate": false,
              "minSpacing": 20,
            },
          },
        },
      },
    },
  },
}
`;
